[tool.poetry]
name = "bidding"
version = "1.0.0"
description = ""
authors = ["Rongzhi Mai <makwin9chi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "1.19.2"
pandas = "1.0.0"
jupyterlab = "3.6.1"
matplotlib = "3.4.0"
pip = "23.0.1"
ipykernel = "6.22.0"
ipympl = "0.9.3"
ipywidgets = "8.0.6"
black = "23.3.0"
isort = "5.12.0"
xlrd = "2.0.1"
openpyxl = "3.1.2"
tqdm = "4.65.0"
jupyterlab-latex = "3.1.0"
jupyterlab-pygments = "0.2.2"
jupyterlab-code-formatter = "1.5.3"
jupyterlab-execute-time = "2.3.1"
jupyterlab-system-monitor = "0.8.0"
jupyterlab-git = "0.41.0"
nodejs = "0.1.1"
jupyter-contrib-nbextensions = "^0.7.0"
traitlets = "5.9.0"
torch = "1.10.0"
absl_py = "0.15.0"
psutil = "5.9.6"
scikit_learn = "0.24.2"
seaborn = "0.10.1"
statsmodels = "0.14.1"


[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
